--- a/public/partials/foodDetail.html
+++ b/public/partials/foodDetail.html
@@ -56,7 +56,8 @@
             
            
          
-	            	<a href="index.html"><button class="btn btn-danger">&lt; Back to Home</button></a>
+	            	<!-- <a href="\foodList.html"><button class="btn btn-danger">&lt; Back </button></a> -->
+                <a href="index.html"><input type="button" value="Back" class="btn btn-primary"></a> 
   
  </form> ())
  
