--- a/public/partials/foodList.html
+++ b/public/partials/foodList.html
@@ -3,7 +3,7 @@
  <form class="span8">
  	<div class="container-fluid">
  		<ul>
-            <h1>FIFA {{foodList2[3].PRICE}}885599</h1>    <img src="img/soccer.png">
+            <h1>FIFA</h1>    <img src="img/soccer.png">
 	
              
  		</ul>
