--- a/public/partials/wantBuy.html
+++ b/public/partials/wantBuy.html
@@ -35,30 +35,14 @@
 	    			                					                	
 	    			           <span><select ng-model='selectedQuty', ng-options='obj.QUTY for obj in qutyList2'></select></span>
 					                    
-					                    <!-- <select  ng-model='selectedQuty'>        -->
-					                	
-					                	   <!-- <option ng-repeat='obj in qutyList2'>{{obj.QUTY}}</option> -->
-			
-			
-			                             <!-- </select> -->
-			                        
-			                       <!-- <input type="hidden" ng-model="newItem.id" />  -->
-			                       <!-- <label >Price:  {{selectedTeam.price|currency}}</label> -->
-
-			                       <!-- <input type="hidden" ng-model="newItem.id" />  -->
-			                       <!-- <input type="hidden" ng-model="newItem.id" />  -->
+					                    
 
 			                       <label >Price:  {{selectedTeam.PRICE|currency}}</label>
 
 					                
 				                   <input type="button" value="Add to Cart"   class="btn btn-danger"   ng-click='addToMyCart()' /> (click the button again if nothing come out)
-				                   <input type="button" value="Delete "   class="btn btn-primary"   ng-click='deleteOrder()'/>
-
-
-			                
-			                       
-						  
-						        
+				                   <!-- <input type="button" value="Delete "   class="btn btn-primary"   ng-click='deleteOrder()'/> -->
+	        
 	   </ul> 
 	   
 	   
@@ -66,8 +50,13 @@
 
 		<ul>
 
-		    <li ng-repeat='item in cartItemList'>
-		        {{item.NAME}}: {{item.PRICE|currency}}   x   {{item.QUTY}} </li>
+		    <li  class="checkbox" ng-repeat='item in cartItemList'>
+
+						<input type="checkbox" ng-click="deleteCartItem(item._id)"> 
+		        {{item.NAME}}: {{item.PRICE|currency}}   x   {{item.QUTY}} 
+
+		        
+			</li>
 			
 		    <li>Total:{{countTotal()|currency}} {{testTotal}}</li>
 
