my 6th commit for heroku

--- a/public/partials/foodList.html
+++ b/public/partials/foodList.html
@@ -20,7 +20,7 @@
    </ul>
  		
  	</div>
- 	(click the bar to see the change in "Total") 	
+ 	(CLICK THE BAR BELOW, SEE WHAT HAPPEN ... ...) 	
     <ul>   
     	
 	   	<li  ng-repeat="food in foodList2" >
