--- a/public/partials/wantSay.html
+++ b/public/partials/wantSay.html
@@ -1,13 +1,13 @@
 
 <section class="row-fluid">  
 	   <form class="row-fluid">
-		    <label>Fan Name</label> 
+		    <label>Name</label> 
 		    
 		        <input   type="text" name="name" ng-model="newcontact.name"/>
 		        
 		            
 		        
-		    <label>My email</label>
+		    <label>Email</label>
 		     
 		    
 		        <input type="text" name="email" ng-model="newcontact.email"/>
@@ -28,8 +28,8 @@
 		<table  class="table table-striped table-bordered">
 			<thead>
 				<tr>
-				    <td class="tdCenter">Fan Name</th>
-				    <td class="tdCenter">My email</th>
+				    <td class="tdCenter">Name</th>
+				    <td class="tdCenter">Email</th>
 				    <td class="tdCenter">My Team</th>
 
 				</tr>
